k8s/auth-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: krypt
spec:
  ports:
    - port: 5001
  selector:
    app: auth-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: krypt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 10
