k8s/diary-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: diary-service
  namespace: krypt
spec:
  ports:
    - port: 5002
  selector:
    app: diary-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diary-service
  namespace: krypt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diary-service
  template:
    metadata:
      labels:
        app: diary-service
    spec:
      containers:
        - name: diary-service
          image: dairy-service:main
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 20
            periodSeconds: 10
