k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krypt-ingress
  namespace: krypt
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001

          - path: /api/diary
            pathType: Prefix
            backend:
              service:
                name: diary-service
                port:
                  number: 5002

          - path: /api/streak
            pathType: Prefix
            backend:
              service:
                name: streak-service
                port:
                  number: 5003

          # Catch-all route to next.js frontend (Must stay last)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
